hard-gists/880901/run.log
=== Docker Run Log for 880901 ===
Started at: Mi 29. Okt 17:57:55 CET 2025

[2025-10-29 17:57:55] START: Running container for 880901
[2025-10-29 17:57:55] SUCCESS: Container 668a2e1bea3840611a3f6f5df3bd59e8fc334d491fcba86d90247102cb225b38 started for 880901
=== Container logs for 880901 ===
  File "/snippet.py", line 21
    print "Added view permission for %s" % content_type.name
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 880901 ===
[2025-10-29 17:57:57] INFO: Container 668a2e1bea3840611a3f6f5df3bd59e8fc334d491fcba86d90247102cb225b38 has stopped
